# chatbackend

./: .dockerignore  .envlocaldatabase  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20260215190000_create_im_core_tables.down.sql  20260215190000_create_im_core_tables.up.sql  20260331120000_add_last_message_at.down.sql  20260331120000_add_last_message_at.up.sql  20260403120000_add_message_seq_and_read_cursor.down.sql  20260403120000_add_message_seq_and_read_cursor.up.sql  20260406120000_add_image_message_fields.down.sql  20260406120000_add_image_message_fields.up.sql
src/: config.rs  errors.rs  main.rs  state.rs  validation.rs
src/entities/: chat_members.rs  chats.rs  message_reads.rs  messages.rs  mod.rs  prelude.rs  users.rs
src/models/: chat.rs  message.rs  user.rs
src/repository/: chat_repo.rs  message_repo.rs  mod.rs  user_repo.rs
src/rooms/: manager.rs
src/rooms/manager/: delivery.rs  presence.rs  state.rs  tests.rs
src/routes/: auth.rs  chats.rs  mod.rs  users.rs  ws.rs
src/service/: auth_service.rs  avatar_service.rs  chat_service.rs  mod.rs
src/websocket/: connection.rs  dispatch.rs  mod.rs  protocol.rs
